updated the java compile to 21 and removed some deprecations